# sandbox

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: gcc.yml
common/data/: ReproductionComponent.hpp  ReproductionComponent.md
common/helpers/: mutationHelper.cpp  mutationHelper.hpp  mutationHelper.md
common/meta/: GenomeComponent.hpp  MutatableComponent.hpp  MutatableComponent.md
plugins/genome_alteration/: CMakeLists.txt  GenomeAlterationSystem.cpp
plugins/reproduction/: Baby.cpp  Baby.hpp  CMakeLists.txt  ReproductionSystem.cpp
src/: main.cpp
src/types/: registerTypes.cpp  registerTypes.hpp  registerkengineAdjustableComponent.cpp  registerkengineAnimationComponent.cpp  registerkengineAnimationFilesComponent.cpp  registerkengineCameraComponent.cpp  registerkengineDebugGraphicsComponent.cpp  registerkengineDirLightComponent.cpp  registerkengineGodRaysComponent.cpp  registerkengineGraphicsComponent.cpp  registerkengineHighlightComponent.cpp  registerkengineImGuiToolComponent.cpp  registerkengineInputComponent.cpp  registerkengineInstanceComponent.cpp  registerkengineLuaComponent.cpp  registerkengineLuaTableComponent.cpp  registerkengineModelAnimationComponent.cpp  registerkengineModelColliderComponent.cpp  registerkengineModelComponent.cpp  registerkengineModelSkeletonComponent.cpp  registerkengineNameComponent.cpp  registerkengineNavMeshComponent.cpp  registerkenginePathfindingComponent.cpp  registerkenginePhysicsComponent.cpp  registerkenginePointLightComponent.cpp  registerkenginePythonComponent.cpp  registerkengineSelectedComponent.cpp  registerkengineSkyBoxComponent.cpp  registerkengineSpotLightComponent.cpp  registerkengineSpriteComponent2D.cpp  registerkengineSpriteComponent3D.cpp  registerkengineTextComponent2D.cpp  registerkengineTextComponent3D.cpp  registerkengineTimeModulatorComponent.cpp  registerkengineTransformComponent.cpp  registerkengineViewportComponent.cpp  registerkengineWindowComponent.cpp  registerkenginefunctionsAppearsInViewport.cpp  registerkenginefunctionsExecute.cpp  registerkenginefunctionsOnClick.cpp  (+1 more)
